Finished wireframe exercise

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
       </ul>
 
       <section>
-        <img src="https://placehold.it/400x480/000" alt="placeholder" />
-        <h2>Featured Section Heading</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt cursus dictum. Aenean consectetur sit amet dui at pulvinar. Donec est odio, pharetra vel sapien vitae, laoreet volutpat sapien. Curabitur et elit at nibh varius iaculis. Donec quis orci auctor, consequat ipsum id, consequat ante. Donec laoreet id arcu sit amet sagittis. Aenean vitae venenatis ipsum. Etiam in ultricies quam. Duis non pharetra dolor, ut molestie leo.
+        <img src="https://placehold.it/480x400/000" alt="placeholder" />
+        <div>
+          <h2>Featured Section Heading</h2>
+          <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt cursus dictum. Aenean consectetur sit amet dui at pulvinar. Donec est odio, pharetra vel sapien vitae, laoreet volutpat sapien. Curabitur et elit at nibh varius iaculis. Donec quis orci auctor, consequat ipsum id, consequat ante. Donec laoreet id arcu sit amet sagittis. Aenean vitae venenatis ipsum. Etiam in ultricies quam. Duis non pharetra dolor, ut molestie leo.
 
-            Morbi eget est dui. Cras ultricies felis orci, vel consectetur arcu dapibus lacinia. Cras libero sapien, suscipit non sem at, efficitur rhoncus dolor. Nunc viverra nulla non consectetur tincidunt. Donec faucibus metus sit amet arcu cursus blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nullam ut massa sollicitudin, vehicula est vitae, gravida enim. Cras vehicula luctus malesuada. Sed semper velit sed turpis consectetur congue. Aenean vitae nisl in sapien porttitor mollis. Praesent sodales, massa elementum dictum efficitur, ante dui eleifend ex, et fringilla leo libero eget sapien. Sed in dapibus ante. Vestibulum fermentum nibh ac neque vestibulum ultrices. Pellentesque facilisis posuere ipsum, at congue neque. Morbi nisi diam, finibus id tellus ut, lacinia viverra diam.
-            
-            Nunc accumsan consequat urna id fermentum. Donec eget semper elit, gravida bibendum tellus. Donec id lectus sollicitudin, pretium felis sed, tempor est. Cras aliquet sapien erat, id maximus purus pharetra sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula leo id bibendum porttitor. Phasellus sit amet porta mauris. Integer a efficitur lorem, ullamcorper lacinia urna.
-        </p>
-        <button>Call to Action</button>
+              Morbi eget est dui. Cras ultricies felis orci, vel consectetur arcu dapibus lacinia. Cras libero sapien, suscipit non sem at, efficitur rhoncus dolor. Nunc viverra nulla non consectetur tincidunt. Donec faucibus metus sit amet arcu cursus blandit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nullam ut massa sollicitudin, vehicula est vitae, gravida enim. Cras vehicula luctus malesuada. Sed semper velit sed turpis consectetur congue. Aenean vitae nisl in sapien porttitor mollis. Praesent sodales, massa elementum dictum efficitur, ante dui eleifend ex, et fringilla leo libero eget sapien. Sed in dapibus ante. Vestibulum fermentum nibh ac neque vestibulum ultrices. Pellentesque facilisis posuere ipsum, at congue neque. Morbi nisi diam, finibus id tellus ut, lacinia viverra diam.
+              
+              Nunc accumsan consequat urna id fermentum. Donec eget semper elit, gravida bibendum tellus. Donec id lectus sollicitudin, pretium felis sed, tempor est. Cras aliquet sapien erat, id maximus purus pharetra sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula leo id bibendum porttitor. Phasellus sit amet porta mauris. Integer a efficitur lorem, ullamcorper lacinia urna.
+          </p>
+          <button>Call to Action</button>
+        </div>
       </section>
     </main>
 
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
